--- a/src/challenge/style/ChallengeList.css
+++ b/src/challenge/style/ChallengeList.css
@@ -19,7 +19,7 @@
 .chCard-outer{
     display: inline-block;
     width: 500px;
-    height: 280px;
+    height: 250px;
     border-radius: 10px;
     padding: 10px 15px;
     margin: 0% 0% 3% 3%;
@@ -34,38 +34,65 @@
     background-origin: border-box; 
     background-clip: content-box, border-box; 
     background-image : linear-gradient(#fff, #fff), linear-gradient(195deg, #9714d4 24%, #005dd6 90%);
+    position: relative;
+}
+.chCard-outer:hover{
+    transform : scale(1.01);
 }
 .chTitle{
-    font-size: 28px;
+    box-sizing: border-box;
+    font-size: 25px;
     text-align: center;
+    height: 60px;
     padding-top: 10px;
-    border: 0px solid skyblue;
+    border: 0px solid rgb(225, 225, 225);
+    font-weight: bolder;
+    /* background: rgb(225, 225, 225); */
+    background-image : linear-gradient(195deg,#9714d4 24%, #005dd6 90%);
+    color: white;
 }
 .chCategory{
-    border: 1px solid skyblue;
+    border: 0px solid skyblue;
+    height: 15%;
+    padding-left: 15px;
+    padding-top: 8px;
+    font-size: large;
+    font-weight: bold;
+    /* background: rgb(225, 225, 225); */
 }
 .chDate{
-    height: 30px;
-    font-size: 20px;
+    height: 13%;
+    font-size: 18px;
     text-align: right;
     padding-right: 10px;
-    border: 1px solid skyblue;
-}
-
-.chWriterPic{
-    border: 1px solid skyblue;
-    width: 70px;
-    height: 70px;
-    float: left;
-}
-.chWriter{
-    border: 1px solid skyblue;
-    width: 70px;
-    float: left;
+    border: 0px solid skyblue;
+    /* background: rgb(225, 225, 225); */
 }
 .chCount{
     text-align: right;
-    font-size: 18px;
+    font-size: 24px;
+    width: 100%;
     padding-right: 10px;
-    border: 1px solid skyblue;
+    border: 0px solid skyblue;
+    /* background: rgb(225, 225, 225); */
+    position: absolute;
+}
+.chWriterPic{
+    border: 2px solid rgb(225, 225, 225);
+    border-radius: 30px;
+    width: 70px;
+    height: 70px;
+    float: left;
+    margin-top: 15px;
+    margin-left: 10px;
+}
+.chWriter{
+    border: 0px solid rgb(225, 225, 225);
+    border-bottom: 0px solid black;
+    height: 20px;
+    float: left;
+    margin-top: 10%;
+    margin-left: 2px;
+    font-weight: bold;
+    font-size: 17px;
 }
